ui: fix details spacing and add upload information

--- a/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/variables.less
+++ b/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/variables.less
@@ -9,5 +9,5 @@
 
 @brand-primary: #0377cd;
 
-// This is nowhere in Zenodo nor Invenio (?)
 @font-size-base: 14px;
+@font-size-small: 12px;
